# jtv-lang

./: .gitignore  .gitlab-ci.yml  .hypatia-ignore  .tool-versions  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  ALIGNMENT-AFFINESCRIPT.adoc  ANCHOR.scope-arrest.2026-01-01.Jewell.scm  AUTHORITY_STACK.mustfile-nickel.scm  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  DEVELOPMENT_PLAN.md  EXPLAINME.adoc  GOVERNANCE.adoc  LICENSING.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  SESSION-RESUME-2026-01-31.md  TEST-NEEDS.md  TOPOLOGY.md  deno.json  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  references.bib  setup.sh  stapeln.toml
.clusterfuzzlite/: build.sh
.github/: dependabot.yml
.machine_readable/: ADJUST.contractile  COPROC-TRAJECTORIES.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile  bot_exclusion_registry.a2ml
academic/: BIBLIOGRAPHY.md  README.md  TODO_GAPS.md
crates/jtv-debug/: Cargo.toml
crates/jtv-debug/src/: main.rs
crates/jtv-lsp/: Cargo.toml
crates/jtv-lsp/src/: main.rs
docs/: GRAMMAR_EVOLUTION.md  QUICK_START.md  ecosystem-status.adoc
fuzz/: Cargo.toml
jtv_proofs/: JtvEcho.lean  JtvExtended.lean  JtvOperational.lean  JtvSecurity.lean  JtvTheorems.lean  JtvTypes.lean
playground/: .gitignore  0-AI-MANIFEST.a2ml  ARCHITECTURE.adoc  CHANGELOG.adoc  Justfile  Mustfile  README.adoc  ROADMAP.adoc  config.ncl  mustfile.toml
spec/: README.adoc  grammar.ebnf  jtv_v2_type_system.adoc  jtv_v2_type_system_corrected.adoc  system-specs.md  type-system.md
verification/: README.adoc  (+1 more)
(+133 files in other folders)
