# SPDX-License-Identifier: MPL-2.0
[package]
name = "jtv-debug"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jtv-core.workspace = true
rustyline.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
